--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,6 +1,6 @@
 <div class="sidebar">
   <div class="container">
-        <img src="{{ "blog_image.jpg" | absURL }}" />
+        <a href="/"><img src="{{ "blog_image.jpg" | absURL }}" /></a>
   </div>
   <div class="container">
     <div class="sidebar-about">
