--- a/layouts/404.html
+++ b/layouts/404.html
@@ -2,8 +2,8 @@
 <div class="content container">
   <div class="post">
     <h1>404 Not Found</h1>
-    <p>What you're looking for isn't here, sorry!</p>
-    <p><a href="{{ "/" | absURL }}">&larr; Click here to go back home</a></p>
+    <p>Hier ist leider nichts! Sorry!</p>
+    <p><a href="{{ "/" | absURL }}">&larr; Home</a></p>
   </div>
 </div>
 {{ partial "foot.html" . }}
