--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,10 +7,9 @@
       <h1 class="post-title">
         <a href="{{ .Permalink }}">{{ .Title }}</a>
       </h1>
-      <span class="post-date">{{ .Date.Format "Jan 2, 2006" }}{{ if not .Site.Params.hideReadingTime }} &middot; {{ .ReadingTime }} minute read{{ end }}{{ if .Site.DisqusShortname }} &middot; <a href="{{ .Permalink }}#disqus_thread">Comments</a>{{ end }}
-      {{ if isset .Params "categories" }}
-      <br/>
-      {{ range .Params.categories }}<a class="label" href="{{ "/categories/" | absURL }}{{ . | urlize }}">{{ . }}</a>{{ end }}
+      <span class="post-date">{{ .Date.Format "02.03.2006" }}{{ if not .Site.Params.hideReadingTime }} &middot; Lesezeit: {{ .ReadingTime }} Minuten{{ end }} &middot; Tags:
+      {{ if isset .Params "tags" }}
+      {{ range .Params.tags }}<a class="label" href="{{ "/tags/" | absURL }}{{ . | urlize }}">{{ . }}</a>{{ end }}
       {{ end }}</span>
       {{ if eq .Site.Params.truncate false }}
       {{ .Content }}
@@ -19,7 +18,7 @@
       <a href="{{ .Permalink }}">Read On &rarr;</a>
       {{ else }}
       {{ .Summary }}
-      {{ if .Truncated }}<a href="{{ .Permalink }}">Read On &rarr;</a>{{ end }}
+      {{ if .Truncated }}<a href="{{ .Permalink }}">Weiterlesen &rarr;</a>{{ end }}
       {{ end }}
     </div>
     {{ end }}
