--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -2,11 +2,14 @@
 <div class="content container">
   <div class="post">
     <h1 class="post-title">{{ .Title }}</h1>
-    <span class="post-date">{{ .Date.Format "02.03.2006" }}{{ if not .Site.Params.hideReadingTime }} &middot; Lesezeit: {{ .ReadingTime }} Minuten{{ end }} &middot; Tags: 
+    <span class="post-date">{{ .Date.Format "02.03.2006" }}{{ if not .Site.Params.hideReadingTime }} &middot; Lesezeit: {{ .ReadingTime }} Minuten{{ end }} &middot; Tags:
     {{ if isset .Params "tags" }}
     {{ range .Params.tags }}<a class="label" href="{{ "/tags/" | absURL }}{{ . | urlize }}">{{ . }}</a>{{ end }}
     {{ end }}</span>
     {{ .Content }}
+    <p>
+        <a href="javascript:history.back()">Zurück</a>
+    </p>
   </div>
 </div>
 
