--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,8 +7,9 @@
       <h1 class="post-title">
         <a href="{{ .Permalink }}">{{ .Title }}</a>
       </h1>
-      <span class="post-date">{{ .Date.Format "02.03.2006" }}{{ if not .Site.Params.hideReadingTime }} &middot; Lesezeit: {{ .ReadingTime }} Minuten{{ end }} &middot; Tags:
+      <span class="post-date">{{ .Date.Format "2 January 2006" }}{{ if not .Site.Params.hideReadingTime }} &middot; Lesezeit: {{ .ReadingTime }} Minuten{{ end }}
       {{ if isset .Params "tags" }}
+      &middot; Tags: 
       {{ range .Params.tags }}<a class="label" href="{{ "/tags/" | absURL }}{{ . | urlize }}">{{ . }}</a>{{ end }}
       {{ end }}</span>
       {{ if eq .Site.Params.truncate false }}
