--- a/layouts/partials/foot.html
+++ b/layouts/partials/foot.html
@@ -1,4 +1,18 @@
 {{ if isset .Site.Params "highlight" }}<script src="{{ "/js/highlight.pack.js" | absURL }}"></script>
 <script>hljs.initHighlightingOnLoad();</script>{{ end }}
+
+<!--
+Automatically add target="_blank" to all links except one ones
+Source: https://stackoverflow.com/a/4425214
+-->
+<script>
+var links = document.links;
+
+for (var i = 0, linksLength = links.length; i < linksLength; i++) {
+   if (links[i].hostname != window.location.hostname) {
+       links[i].target = '_blank';
+   }
+}
+</script>
 </body>
 </html>
