--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -8,7 +8,7 @@
     </div>
 
     <ul class="sidebar-nav">
-    Menu:
+    Inhalte:
       <li class="sidebar-nav-item"><a href="{{ "/" | absURL }}">{{ if isset .Site.Params "home"}}{{ .Site.Params.home }}{{ else }}Blog{{ end }}</a></li>
       {{ range .Site.Menus.main }}
       <li class="sidebar-nav-item">{{ .Pre }}<a href="{{ .URL | absURL }}">{{ .Name }}</a></li>
