--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -2,8 +2,9 @@
 <div class="content container">
   <div class="post">
     <h1 class="post-title">{{ .Title }}</h1>
-    <span class="post-date">{{ .Date.Format "02.03.2006" }}{{ if not .Site.Params.hideReadingTime }} &middot; Lesezeit: {{ .ReadingTime }} Minuten{{ end }} &middot; Tags:
+    <span class="post-date">{{ .Date.Format "Monday, January 2 2006" }}{{ if not .Site.Params.hideReadingTime }} &middot; Lesezeit: {{ .ReadingTime }} Minuten{{ end }}
     {{ if isset .Params "tags" }}
+    &middot; Tags:
     {{ range .Params.tags }}<a class="label" href="{{ "/tags/" | absURL }}{{ . | urlize }}">{{ . }}</a>{{ end }}
     {{ end }}</span>
     {{ .Content }}
