--- a/static/css/poole.css
+++ b/static/css/poole.css
@@ -170,7 +170,7 @@ pre {
   white-space: pre-wrap;
   word-break: break-all;
   word-wrap: break-word;
-  background-color: #f9f9f9;
+  background-color: #D9D9D9;
 }
 pre code {
   padding: 0;
