--- a/layouts/partials/foot.html
+++ b/layouts/partials/foot.html
@@ -2,14 +2,15 @@
 <script>hljs.initHighlightingOnLoad();</script>{{ end }}
 
 <!--
-Automatically add target="_blank" to all links except one ones
+Automatically add target="_blank" to all links except owe ones
 Source: https://stackoverflow.com/a/4425214
 -->
 <script>
 var links = document.links;
 
 for (var i = 0, linksLength = links.length; i < linksLength; i++) {
-   if (links[i].hostname != window.location.hostname) {
+   if (links[i].hostname != window.location.hostname && links[i].name != "dontsettarget") {
+       console.log(links[i]);
        links[i].target = '_blank';
    }
 }
