--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,14 +9,16 @@
       </h1>
       <span class="post-date">{{ .Date.Format "2 January 2006" }}{{ if not .Site.Params.hideReadingTime }} &middot; Lesezeit: {{ .ReadingTime }} Minuten{{ end }}
       {{ if isset .Params "tags" }}
-      &middot; Tags: 
-      {{ range .Params.tags }}<a class="label" href="{{ "/tags/" | absURL }}{{ . | urlize }}">{{ . }}</a>{{ end }}
-      {{ end }}</span>
+      &middot; Tags:
+      {{ range .Params.tags }}
+        <a class="label" href="{{ "/tags/" | absURL }}{{ . | urlize }}">{{ . }}</a>{{ end }}
+      {{ end }}
+      </span>
       {{ if eq .Site.Params.truncate false }}
       {{ .Content }}
       {{ else if .Description }}
       <p>{{ .Description }}</p>
-      <a href="{{ .Permalink }}">Read On &rarr;</a>
+      <a href="{{ .Permalink }}">Weiterlesen &rarr;</a>
       {{ else }}
       {{ .Summary }}
       {{ if .Truncated }}<a href="{{ .Permalink }}">Weiterlesen &rarr;</a>{{ end }}
