--- a/layouts/partials/foot.html
+++ b/layouts/partials/foot.html
@@ -1,5 +1,7 @@
-{{ if isset .Site.Params "highlight" }}<script src="{{ "/js/highlight.pack.js" | absURL }}"></script>
-<script>hljs.initHighlightingOnLoad();</script>{{ end }}
+{{ if isset .Site.Params "highlight" }}
+    <script src="{{ "/js/highlight.pack.js" | absURL }}"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
+{{ end }}
 
 <!--
 Automatically add target="_blank" to all links except owe ones
@@ -10,10 +12,13 @@ var links = document.links;
 
 for (var i = 0, linksLength = links.length; i < linksLength; i++) {
    if (links[i].hostname != window.location.hostname && links[i].name != "dontsettarget") {
-       console.log(links[i]);
        links[i].target = '_blank';
    }
 }
 </script>
+
+<!-- Add JS for international customization -->
+<script src="{{ "i18n.jscript" | absURL }}" async="async"></script>
+
 </body>
 </html>
