--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -16,11 +16,15 @@
   <link rel="stylesheet" href="{{ "/css/hyde-overrides.css" | absURL }}">
   <link rel="stylesheet" href="{{ "/css/hyde-x.css" | absURL }}">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-  {{ if isset .Site.Params "highlight" }}<link rel="stylesheet" href="{{ "/css/highlight/" | absURL }}{{ .Site.Params.highlight }}.css">{{ end }}
-  {{ with .Site.Params.customCSS }}<link rel="stylesheet" href="{{ . }}">{{ end }}
+  {{ if isset .Site.Params "highlight" }}
+  <link rel="stylesheet" href="{{ "/css/highlight/" | absURL }}{{ .Site.Params.highlight }}.css">
+  {{ end }}
+  {{ with .Site.Params.customCSS }}
+  <link rel="stylesheet" href="{{ . }}">
+  {{ end }}
 
   <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ "/touch-icon-144-precomposed.png" | absURL }}">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ "/touch-icon.png" | absURL }}">
   <link href="{{ "/favicon.ico" | absURL }}" rel="icon">
 
   <!-- RSS -->
