Added extra class comment-info

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -21,7 +21,7 @@
 
     <!-- Content -->
     {{ .Content }}
-    <span class="post-date">
+    <span class="comment-info">
         <br />
         <br />
         Du hast einen Kommentar, einen Wunsch oder eine Verbeserung? Schreib mir doch eine E-Mail! Die Infos dazu stehen <a href="{{ "kontakt" | absURL }}">hier</a>.
