--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,3 @@
 <p>
-    Content licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0</a> - Powered by <a href="https://gohugo.io" target="_blank">Hugo</a> and a customized Hyde-X template
+    Content licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0</a> - Powered by <a href="https://gohugo.io" target="_blank">Hugo</a> and a customized <a href="https://github.com/vlcty/hyde-x-custom" target="_blank">Hyde-X template</a>
 </p>
