Added emoji hint to every blogpost

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -23,8 +23,10 @@
     {{ .Content }}
     <span class="comment-info">
         <br />
+        Du hast einen Kommentar, einen Wunsch oder eine Verbeserung? Schreib mir doch eine E-Mail! Die Infos dazu stehen <a href="{{ "kontakt" | absURL }}">hier</a>.<br />
         <br />
-        Du hast einen Kommentar, einen Wunsch oder eine Verbeserung? Schreib mir doch eine E-Mail! Die Infos dazu stehen <a href="{{ "kontakt" | absURL }}">hier</a>.
+        🖇️ = Link zu anderer Webseite<br />
+        🔐 = Webseite nutzt HTTPS (verschlüsselter Transportweg)
     </span>
     <span>
         <!--
