--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -25,6 +25,9 @@
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ "/touch-icon.png" | absURL }}">
   <link href="{{ "/favicon.ico" | absURL }}" rel="icon">
 
+  <!-- A2HS -->
+  <link rel="manifest" href="manifest.webmanifest">
+
   <!-- RSS -->
   {{ $siteTitle := .Site.Title }}
   {{ $authorName := .Site.Author.name }}
