Added TOC in front of the content when front matter states "toc: true"

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -19,6 +19,11 @@
         {{ end }}
     {{ end }}
 
+    {{ if .Params.toc }}
+    <b>Inhaltsübersicht:</b>
+    {{ .TableOfContents }}
+    {{ end }}
+
     <!-- Content -->
     {{ .Content }}
     <span class="comment-info">
